feat: National dashboard API endpoint
